Closed Bug 1649569 Opened 6 years ago Closed 6 years ago

Assertion failure: !value.isNaN(), at src/dom/html/input/InputType.cpp:258

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

VERIFIED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- wontfix
firefox77 --- wontfix
firefox78 --- wontfix
firefox79 --- wontfix
firefox80 --- verified

People

(Reporter: tsmith, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: assertion, regression, testcase, Whiteboard: [bugmon:bisected,confirmed], [wptsync upstream])

Attachments

(3 files)

Attached file testcase.html

Assertion failure: !value.isNaN(), at /builds/worker/checkouts/gecko/dom/html/input/InputType.cpp:258

0|0|libxul.so|mozilla::dom::InputType::GetValidationMessage(nsTSubstring<char16_t>&, nsIConstraintValidation::ValidityStateType)|hg:hg.mozilla.org/mozilla-central:dom/html/input/InputType.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|258|0x29
0|1|libxul.so|mozilla::dom::HTMLInputElement_Binding::get_validationMessage(JSContext*, JS::Handle<JSObject*>, void*, JSJitGetterCallArgs)|s3:gecko-generated-sources:84320e2bb49471ed4830ad5ef4a1c39718b81c460fdd04b7b04c2d27f6a54d3e50933c0a522aa1364a4a19bc2d8a593cbbf7f9a72a27fe2da0457443b61c5284/dom/bindings/HTMLInputElementBinding.cpp:|3518|0x24
0|2|libxul.so|bool mozilla::dom::binding_detail::GenericGetter<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|3101|0x1c
0|3|libxul.so|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|486|0x12
0|4|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|578|0xe
0|5|libxul.so|InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|641|0x10
0|6|libxul.so|js::CallGetter(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|782|0x2b
0|7|libxul.so|bool GetExistingProperty<(js::AllowGC)1>(JSContext*, js::MaybeRooted<JS::Value, (js::AllowGC)1>::HandleType, js::MaybeRooted<js::NativeObject*, (js::AllowGC)1>::HandleType, js::MaybeRooted<js::Shape*, (js::AllowGC)1>::HandleType, js::MaybeRooted<JS::Value, (js::AllowGC)1>::MutableHandleType)|hg:hg.mozilla.org/mozilla-central:js/src/vm/NativeObject.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|2313|0x55
0|8|libxul.so|bool NativeGetPropertyInline<(js::AllowGC)1>(JSContext*, js::MaybeRooted<js::NativeObject*, (js::AllowGC)1>::HandleType, js::MaybeRooted<JS::Value, (js::AllowGC)1>::HandleType, js::MaybeRooted<JS::PropertyKey, (js::AllowGC)1>::HandleType, IsNameLookup, js::MaybeRooted<JS::Value, (js::AllowGC)1>::MutableHandleType)|hg:hg.mozilla.org/mozilla-central:js/src/vm/NativeObject.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|2453|0x19
0|9|libxul.so|js::GetProperty(JSContext*, JS::Handle<JSObject*>, JS::Handle<JS::Value>, js::PropertyName*, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/ObjectOperations-inl.h:bbf2aac9fc58ff26d969c05d027507b4b03d145d|124|0x15
0|10|libxul.so|js::GetProperty(JSContext*, JS::Handle<JS::Value>, JS::Handle<js::PropertyName*>, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|4689|0x12
0|11|libxul.so|Interpret(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|2980|0x40e
0|12|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|458|0xb
0|13|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|613|0x8
0|14|libxul.so|InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|641|0x10
0|15|libxul.so|<name omitted>|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|658|0xb
0|16|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|2842|0x23
0|17|libxul.so|mozilla::dom::EventHandlerNonNull::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&)|s3:gecko-generated-sources:5ceb4fd1d8dc61bfa9cb634c1ccbea88477929f8e3cd832f14dbaaa72fb11378c7536241ae3f9b1a6d2506d829d115fe64e0fdcf3301157cfcf64f24a4f984df/dom/bindings/EventHandlerBinding.cpp:|276|0xb
0|18|libxul.so|void mozilla::dom::EventHandlerNonNull::Call<nsCOMPtr<mozilla::dom::EventTarget> >(nsCOMPtr<mozilla::dom::EventTarget> const&, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:5abc72777d30ad0ea7b8b3e1392cd7961bd73b8cd08e5ab209f3b42251def563ee9c9a7cea98a24d0fa9d867edfc0c0297c165b0d167458ac5a2af4b7a0caebe/dist/include/mozilla/dom/EventHandlerBinding.h:|367|0x28
0|19|libxul.so|mozilla::JSEventHandler::HandleEvent(mozilla::dom::Event*)|hg:hg.mozilla.org/mozilla-central:dom/events/JSEventHandler.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|201|0x2e
0|20|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1088|0xc
0|21|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1280|0x16
0|22|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|356|0xb
0|23|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|558|0x19
0|24|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1055|0x5
0|25|libxul.so|nsDocumentViewer::LoadComplete(nsresult)|hg:hg.mozilla.org/mozilla-central:layout/base/nsDocumentViewer.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1148|0x1c
0|26|libxul.so|nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|5799|0x18
0|27|libxul.so|nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|5541|0xb
0|28|libxul.so|non-virtual thunk to nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|0|0x10
0|29|libxul.so|nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1377|0x2b
0|30|libxul.so|nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|937|0x28
0|31|libxul.so|nsDocLoader::DocLoaderIsEmpty(bool, mozilla::Maybe<nsresult> const&)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|757|0xe
0|32|libxul.so|nsDocLoader::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|640|0x12
0|33|libxul.so|non-virtual thunk to nsDocLoader::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|0|0xd
0|34|libxul.so|mozilla::net::nsLoadGroup::NotifyRemovalObservers(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/base/nsLoadGroup.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|615|0x14
0|35|libxul.so|mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/base/nsLoadGroup.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|522|0xe
0|36|libxul.so|imgRequestProxy::RemoveFromLoadGroup()|hg:hg.mozilla.org/mozilla-central:image/imgRequestProxy.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|383|0x2d
0|37|libxul.so|imgRequestProxy::OnLoadComplete(bool)|hg:hg.mozilla.org/mozilla-central:image/imgRequestProxy.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1038|0x8
0|38|libxul.so|void mozilla::image::ImageObserverNotifier<mozilla::image::ObserverTable const*>::operator()<void mozilla::image::SyncNotifyInternal<mozilla::image::ObserverTable const*>(mozilla::image::ObserverTable const* const&, bool, unsigned int, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&)::{lambda(mozilla::image::IProgressObserver*)#7}>(void mozilla::image::SyncNotifyInternal<mozilla::image::ObserverTable const*>(mozilla::image::ObserverTable const* const&, bool, unsigned int, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&)::{lambda(mozilla::image::IProgressObserver*)#7})|hg:hg.mozilla.org/mozilla-central:image/ProgressTracker.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|351|0x18
0|39|libxul.so|void mozilla::image::SyncNotifyInternal<mozilla::image::ObserverTable const*>(mozilla::image::ObserverTable const* const&, bool, unsigned int, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&)|hg:hg.mozilla.org/mozilla-central:image/ProgressTracker.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|350|0x8
0|40|libxul.so|mozilla::image::ProgressTracker::SyncNotifyProgress(unsigned int, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&)|hg:hg.mozilla.org/mozilla-central:image/ProgressTracker.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|368|0x5c
0|41|libxul.so|mozilla::image::VectorImage::OnSVGDocumentLoaded()|hg:hg.mozilla.org/mozilla-central:image/VectorImage.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1443|0x1e
0|42|libxul.so|mozilla::image::SVGLoadEventListener::HandleEvent(mozilla::dom::Event*)|hg:hg.mozilla.org/mozilla-central:image/VectorImage.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|212|0xf
0|43|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1088|0xc
0|44|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1280|0x16
0|45|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|356|0xb
0|46|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|558|0x19
0|47|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1055|0x5
0|48|libxul.so|mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsPresContext*, nsEventStatus*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|0|0x8
0|49|libxul.so|nsINode::DispatchEvent(mozilla::dom::Event&, mozilla::dom::CallerType, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1302|0x10
0|50|libxul.so|mozilla::dom::EventTarget::DispatchEvent(mozilla::dom::Event&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventTarget.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|178|0x33
0|51|libxul.so|mozilla::AsyncEventDispatcher::Run()|hg:hg.mozilla.org/mozilla-central:dom/events/AsyncEventDispatcher.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|69|0x22
0|52|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|1236|0xe
0|53|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|501|0xc
0|54|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|87|0x7
0|55|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:bbf2aac9fc58ff26d969c05d027507b4b03d145d|315|0x17
0|56|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:bbf2aac9fc58ff26d969c05d027507b4b03d145d|290|0x8
0|57|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|137|0xd
0|58|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|913|0xe
0|59|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|237|0x5
0|60|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:bbf2aac9fc58ff26d969c05d027507b4b03d145d|315|0x17
0|61|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:bbf2aac9fc58ff26d969c05d027507b4b03d145d|290|0x8
0|62|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|744|0x5
0|63|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|56|0x11
0|64|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:bbf2aac9fc58ff26d969c05d027507b4b03d145d|303|0x20
Flags: in-testsuite?
Whiteboard: [bugmon:bisected,confirmed]
Bugmon Analysis: Verified bug as reproducible on mozilla-central 20200702152109-2d709e60c76e. The bug appears to have been introduced in the following build range: > Start: 6d0a027cba9d1d4dedf9ec11c4f0eca1e0b25301 (20200323101530) > End: 07fc10be600e4f19e9f6639e17db2042f6e82b85 (20200323101634) > Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=6d0a027cba9d1d4dedf9ec11c4f0eca1e0b25301&tochange=07fc10be600e4f19e9f6639e17db2042f6e82b85
Flags: needinfo?(emilio)
Assignee: nobody → emilio

This can happen because we don't have a nice mechanism to update the
validity bits in all cases where the computed "language" changes.

That's not really a regression, and I'm on PTO, so for now we just deal
with it. The "bad input" message seems appropriate for this case rather
than returning garbage numbers.

This doesn't really need so many temporary strings.

Depends on D82402

This is basically a known issue with how <input type=number> localization works, which causes this assertion to fire.

Flags: needinfo?(emilio)
Attachment #9161649 - Attachment description: Bug 1649569 - Don't assert in GetValidationMessage that we got a bad number. r=edgar → Bug 1649569 - Don't assert in GetValidationMessage that we got a good number. r=edgar
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ab5801809b91 Don't assert in GetValidationMessage that we got a good number. r=edgar https://hg.mozilla.org/integration/autoland/rev/f7aeac910f0a Simplify a bit GetValidationMessage. r=edgar
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/24485 for changes under testing/web-platform/tests
Whiteboard: [bugmon:bisected,confirmed] → [bugmon:bisected,confirmed], [wptsync upstream]
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Upstream PR merged by moz-wptsync-bot
Status: RESOLVED → VERIFIED
Keywords: bugmon
Bugmon Analysis: Verified bug as fixed on rev mozilla-central 20200707213111-fb2b08c6bc8c. Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.
Flags: in-testsuite? → in-testsuite+
Regressed by: 1622221
Has Regression Range: --- → yes

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

I think this can ride the trains.

Flags: needinfo?(emilio)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: