Bug 1649569 - Don't assert in GetValidationMessage that we got a good number. r=edgar

This can happen because we don't have a nice mechanism to update the
validity bits in all cases where the computed "language" changes.

That's not really a regression, and I'm on PTO, so for now we just deal
with it. The "bad input" message seems appropriate for this case rather
than returning garbage numbers.

Differential Revision: https://phabricator.services.mozilla.com/D82402